Added images to flies page. Fixed layout of pest control service page

--- a/flies.html
+++ b/flies.html
@@ -101,7 +101,12 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="USDAgov / Public domain" href="https://commons.wikimedia.org/wiki/File:Common_house_fly,_Musca_domestica.jpg"><img width="512" alt="Common house fly, Musca domestica" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/14/Common_house_fly%2C_Musca_domestica.jpg/512px-Common_house_fly%2C_Musca_domestica.jpg"></a>
+            </a>
+            <a>
+                By USDAgov - <a rel="nofollow" class="external free" href="https://www.flickr.com/photos/usdagov/8674435033/sizes/o/in/photostream/">https://www.flickr.com/photos/usdagov/8674435033/sizes/o/in/photostream/</a>, Public Domain, <a href="https://commons.wikimedia.org/w/index.php?curid=25727555">Link</a>
+            </a>
         </div>
         <div class="col-md-4">
             <!--h3 class="my-3">Pest Description</h3-->
@@ -152,7 +157,12 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <a>
+                <a title="André Karwath aka Aka / CC BY-SA (https://creativecommons.org/licenses/by-sa/2.5)" href="https://commons.wikimedia.org/wiki/File:Drosophila_melanogaster_-_side_(aka).jpg"><img width="512" alt="Drosophila melanogaster - side (aka)" src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Drosophila_melanogaster_-_side_%28aka%29.jpg"></a>
+            </a>
+            <a>
+                By André Karwath aka <a href="//commons.wikimedia.org/wiki/User:Aka" title="User:Aka">Aka</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/2.5" title="Creative Commons Attribution-Share Alike 2.5">CC BY-SA 2.5</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=227170">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
@@ -204,71 +214,26 @@
     <!-- Portfolio Item Row -->
     <div class="row">
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/5/52/Female_black_fungus_gnat.jpg" alt="">
+            <a>
+                By <a rel="nofollow" class="external text" href="https://www.flickr.com/photos/13470115@N08/">EBKauai</a> - <a rel="nofollow" class="external free" href="https://www.flickr.com/photos/13470115@N08/3517202763/">https://www.flickr.com/photos/13470115@N08/3517202763/</a>, <a href="https://creativecommons.org/licenses/by/2.0" title="Creative Commons Attribution 2.0">CC BY 2.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=15270366">Link</a>
+            </a>
         </div>
 
         <div class="col-md-4">
             <h3 class="my-3">Pest Description</h3>
-            <p>Gnats are widely known for their small size, contrasting their large numbers. 
+            <p>Gnats are widely known for their small size and large numbers, along with their tendency to swarm together and form "clouds".
+                Gnat clouds are formed by male gnats seeking mates by using the cloud's size to gain more attention than their small bodies can alone.
+                Due to this, gnat clouds will hover around large objects, such as people, to gain more attention. Gnats are more common in humid, damp areas,
+                resulting in more activity during the summer. While most gnats are non-biting, some do indeed bite humans and animals.
             </p>
         </div>
         <div class="row">
             <div class="col">
                 <h3 class="my-3">CHARACTERISTICS</h3>
                 <ul>
-                    <li>Dark brown or black</li>
-                    <li>1 in. size, long in shape</li>
-                </ul>
-            </div>
-            <div class="col">
-                <h3 class="my-3">DISEASES</h3>
-                <ul>
-                    <li>Salmonellosis</li>
-                    <li>Typhoid Fever</li>
-                    <li>Cholera</li>
-                    <li>Dysentery</li>
-                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-                </ul>
-            </div>
-            <!--div class="col">
-                <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">DISEASES</h3>
-                <ul>
-                    <li>Salmonellosis</li>
-                    <li>Typhoid Fever</li>
-                    <li>Cholera</li>
-                    <li>Dysentery</li>
-                    <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
-                </ul>
-            </div-->
-        </div>
-
-    </div>
-    <!-- /.row -->
-
-    <div class="card text-white bg-main my-5 py-4 text-center">
-        <div class="card-body">
-            <h1>Brown-banded Cockroaches</h1>
-            <p class="text-white m-0"></p>
-        </div>
-    </div>
-    <!-- Portfolio Item Row -->
-    <div class="row">
-        <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
-        </div>
-
-        <div class="col-md-4">
-            <h3 class="my-3">Pest Description</h3>
-            <p>Brown-banded Cockroaches fly short distances to reach high spots in the kitchens and bathrooms they are likely to reside in.
-                They prefer warm, dry locations and tend to fly toward the ceiling, unlike most other roaches. They are easily distinguished
-                by the banding along their body and wings along with their tendency to fly.</p>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h3 class="my-3">CHARACTERISTICS</h3>
-                <ul>
-                    <li>Black</li>
-                    <li>16 in. size, long and oval in shape</li>
+                    <li>Black with long, slender abdomen</li>
+                    <li>1/8 in. to 1/4 in. size, usually in swarms</li>
                 </ul>
             </div>
             <div class="col">
