--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
               <a class="dropdown-item" href="roaches.html">Cockroaches</a>
               <a class="dropdown-item" href="fleas.html">Fleas</a>
-              <a class="dropdown-item" href="flies.html">Flies (wip)</a>
+              <a class="dropdown-item" href="flies.html">Flies</a>
               <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
               <a class="dropdown-item" href="rodents.html">Rodents</a>
               <a class="dropdown-item" href="hornets.html">Hornets</a>
