--- a/pest-control.html
+++ b/pest-control.html
@@ -112,16 +112,18 @@
                 <li>Perform</li>
                 <li>Observe</li>
             </ul-->
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">DETECT</button>
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">PERFORM</button>
-            <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">OBSERVE</button>
+            <button class="btn btn-primary" style="font-family: Arial Black; color:#e7ddcb;" onclick="myFunction(1)">DETECT</button>
+            <button class="btn btn-primary" style="font-family: Arial Black; color:#e7ddcb;" onclick="myFunction(2)">PERFORM</button>
+            <button class="btn btn-primary" style="font-family: Arial Black; color:#e7ddcb;" onclick="myFunction(3)">OBSERVE</button>
 
-            <div id="div1" name="info" style="display:none">
-                <h5>Inspection</h5>
-                A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
-                and other risk areas that may attract an infestation. Calvert Exterminators utilizes tried-and-true detection methods along with a keen eye for even the most
-                minute details in order to fully assess the level of infestation. Upon completing the initial sweep, we will recommend a service method along with a personalized
-                price tag, just for you.
+            <div id="div1" name="info" style="display:none;" class="bg-second">
+                <h5 style="margin-left: 10px">Inspection</h5>
+                <a style="padding-left:10px; margin-left: 10px; color:white;">
+                    A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
+                    and other risk areas that may attract an infestation. Calvert Exterminators utilizes tried-and-true detection methods along with a keen eye for even the most
+                    minute details in order to fully assess the level of infestation. Upon completing the initial sweep, we will recommend a service method along with a personalized
+                    price tag, just for you.
+                </a>
             </div>
             <div id="div2" name="info" style="display:none">
                 If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
@@ -168,8 +170,8 @@
 
     <div class="row">
         <div class="col">
-            <h3 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h3>
-            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">FIRST VISIT</h4>
+            <h2 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h2>
+            <h4 class="my-4">FIRST VISIT</h4>
             <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
             <h4 class="my-4">REGULAR VISITS</h4>
             <p> Pests are always active, so you need protection to stay ahead of them.
@@ -183,7 +185,7 @@
     </div>
 
     <!-- Related Projects Row -->
-    <h3 class="my-4">COVERAGE INCLUDES:</h3>
+    <h4 class="my-4">COVERAGE INCLUDES:</h4>
 
     <div class="row">
 
