Updated layout of pest and termite control pages. Added text. Updated navbar links to include vet and client pages

--- a/pricing.html
+++ b/pricing.html
@@ -78,8 +78,8 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
             <a class="dropdown-item" href="about.html">About Us</a>
-            <a class="dropdown-item" href="mammals.html">Clients</a>
-            <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
+            <a class="dropdown-item" href="clients.html">Clients</a>
+            <a class="dropdown-item" href="vet.html">Veteran Owned</a>
             <a class="dropdown-item" href="faq.html">FAQ</a>
           </div>
         </li>
