--- a/termite-control.html
+++ b/termite-control.html
@@ -79,8 +79,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                         <a class="dropdown-item" href="about.html">About Us</a>
-                        <a class="dropdown-item" href="mammals.html">Clients</a>
-                        <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
+                        <a class="dropdown-item" href="clients.html">Clients</a>
+                        <a class="dropdown-item" href="vet.html">Veteran Owned</a>
                         <a class="dropdown-item" href="faq.html">FAQ</a>
                     </div>
                 </li>
@@ -129,46 +129,33 @@
 
         <div class="col-md-4">
             <h2 class="my-3">HOW TERMITE CONTROL WORKS</h2>
-            <p>Homeowners lose an average of $3,000 to termite damage...</p>
+            <p>Homeowners lose an average of $3,000 to termite damage. Stay ahead of this unseen enemy.</p>
             <h4 class="my-3">THE STEPS:</h4>
-            <!--ul>
-                <li>Detect-
-                    Inspection
-
-                    An Orkin Specialist will perform a thorough examination of you home by checking your basement or crawlspace for moisture, your foundation for wood debris, and other risk areas that may attract an infestation. Orkin utilizes state-of-the-art equipment such as IR thermometers, moisture meters, and termite detection systems to help him scientifically assess your home. When we are done, you will receive our recommendation, complete with customized digital diagrams and an Orkin Inspection Report outlining problems we identified, as well as recommended plan to protect your home from termites.
-                </li>
-                <li>Perform</li>
-                <li>Observe</li>
-            </ul-->
             <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(1)">DETECT</button>
             <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(2)">PERFORM</button>
             <button class="btn btn-primary" style="font-family: Arial Black;" onclick="myFunction(3)">OBSERVE</button>
 
-            <div id="div1" name="info" style="display:none">
-                <h5>Inspection</h5>
-                A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture,
-                your foundation for wood debris, and other risk areas that may attract an infestation. Calvert Exterminators utilizes
-                tried-and-true detection methods along with a keen eye for even the most minute details in order to fully assess the level of infestation and damage.
-                Upon completing the initial sweep, we will recommend a service method along with a personalized price tag, just for you.
+            <div id="div1" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <h5 class="text-center">Inspection</h5>
+                <p class="text-center">
+                    A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture,
+                    your foundation for wood debris, and other risk areas that may attract an infestation. Calvert Exterminators utilizes
+                    tried-and-true detection methods along with a keen eye for even the most minute details in order to fully assess the level of infestation and damage.
+                    Upon completing the initial sweep, we will recommend a service method along with a personalized price tag, just for you.
+                </p>
             </div>
-            <div id="div2" name="info" style="display:none">
-                If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
-
-
-                If Orkin finds a termite infestation or the potential for one, he will discuss the best solution for your situation.
-                <h5>Termidor® Liquid Treatment</h5>
-
-                The treatment offers immediate protection as well as protection from future infestations throughout the duration of the protection plan.
-                <h5>Dry Foam And OrkinFoam</h5>
-
-                OrkinFoam treatments expand to reach critical areas, providing extra coverage and protection against termites.
-                <h5>Sentricon® Bait and Monitoring</h5>
-                Sentricon® targets at-risk locations around your home such as, old tree stumps, moist soil, irrigation sprinkler heads, roof downspouts and other moist areas.
+            <div id="div2" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <p class="text-center">
+                    If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
+                    Our solutions vary based on the current season, species of termite, location of infestation, and extent of infestation. These factors
+                    are all important to solving your problem while saving you money.
+                </p>
             </div>
-            <div id="div3" name="info" style="display:none">
-                After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
-                Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
-
+            <div id="div3" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <p class="text-center">
+                    After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
+                    Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
+                </p>
             </div>
 
             <script>
@@ -195,19 +182,24 @@
     <!-- /.row -->
 
     <div class="row">
-        <div class="col">
+        <div class="card h-100 bg-main my-3">
+            <h4 class="card-header"></h4>
+            <div class="card-body">
+                <h4 style="font-family:Arial Black;">MONTHLY PEST CONTROL</h4>
+                <p class="card-text">
+                    One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection.
+                </p>
+            </div>
+            <div class="card-footer"></div>
+        </div>
+        <!--div class="col">
             <h2 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h2>
             <h4 class="my-4">FIRST VISIT</h4>
             <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
             <h4 class="my-4">REGULAR VISITS</h4>
-            <p> Pests are always active, so you need protection to stay ahead of them.
-
-                Our custom treatments adapt with the season to address seasonal pest activity in your area, giving you protection all year long.
-
-                We'll come back to re-treat outside your home every season for a total of four treatments, including the initial service.
-
-                And if pests come back, so will we - at no cost to you. It is all a part of our 100% Satisfaction Guarantee.</p>
-        </div>
+            <p> Pests are always active, so you need protection to stay ahead of them. Our individualized treatments adjust with the season to protect your
+                property from seasonal pest activity in your area. </p>
+        </div-->
     </div>
 
 </div>
