--- a/pest-control.html
+++ b/pest-control.html
@@ -78,8 +78,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                         <a class="dropdown-item" href="about.html">About Us</a>
-                        <a class="dropdown-item" href="mammals.html">Clients</a>
-                        <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
+                        <a class="dropdown-item" href="clients.html">Clients</a>
+                        <a class="dropdown-item" href="vet.html">Veteran Owned</a>
                         <a class="dropdown-item" href="faq.html">FAQ</a>
                     </div>
                 </li>
@@ -141,33 +141,29 @@
             <button class="btn btn-primary" style="font-family: Arial Black; color:#e7ddcb;" onclick="myFunction(2)">PERFORM</button>
             <button class="btn btn-primary" style="font-family: Arial Black; color:#e7ddcb;" onclick="myFunction(3)">OBSERVE</button>
 
-            <div id="div1" name="info" style="display:none;">
-                <h5>Inspection</h5>
-                <a>
-                    A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
+            <div id="div1" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <h5 class="text-center">Inspection</h5>
+                <p class="text-center">A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
                     and other risk areas that may attract an infestation. Calvert Exterminators utilizes tried-and-true detection methods along with a keen eye for even the most
                     minute details in order to fully assess the level of infestation. Upon completing the initial sweep, we will recommend a service method along with a personalized
-                    price tag, just for you.
-                </a>
+                    price tag, just for you.</p>
             </div>
-            <div id="div2" name="info" style="display:none">
-                If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
-
-
-                If Orkin finds a termite infestation or the potential for one, he will discuss the best solution for your situation.
-                <h5>Termidor® Liquid Treatment</h5>
-
-                The treatment offers immediate protection as well as protection from future infestations throughout the duration of the protection plan.
-                <h5>Dry Foam And OrkinFoam</h5>
-
-                OrkinFoam treatments expand to reach critical areas, providing extra coverage and protection against termites.
-                <h5>Sentricon® Bait and Monitoring</h5>
-                Sentricon® targets at-risk locations around your home such as, old tree stumps, moist soil, irrigation sprinkler heads, roof downspouts and other moist areas.
+            <div id="div2" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <p class="text-center">
+                    If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
+                </p>
+                <h5 class="text-center">Solutions</h5>
+                <p class="text-center">
+                    The solutions utilized by our exterminators varies based on the situation, putting the right amount of pressure on the infestation to bring the results with minimal cost to you!
+                    Our methods and technologies range from the most advanced pesticides to tried-and-true rodent traps. Like a mechanic choosing the right tool for the job, our solutions are selected
+                    based on analysis of the situation.
+                </p>
             </div>
-            <div id="div3" name="info" style="display:none">
-                After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
-                Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
-
+            <div id="div3" name="info" style="display:none; background-color: #2E9CCA; border-radius: 25px;">
+                <p class="text-center">
+                    After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
+                    Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
+                </p>
             </div>
 
             <script>
