Cleaned up contact page

--- a/contact.html
+++ b/contact.html
@@ -153,12 +153,13 @@
     </div>
     <!-- /.row -->
 
+    <h3 style="font-family: Arial Black;">Arrange a Service</h3>
+
     <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
     <div class="row bg-main">
       <div class="col-lg-8 mb-4">
-        <h3 style="font-family: Arial Black; color:#15B2D1">Arrange a Service</h3>
-        <p66>Just follow the forms and we'll get back to your preferred contact method within one business day to set up a service time and payment method!</p66>
+        <p style="color:black">Just follow the forms and we'll get back to your preferred contact method within one business day to set up a service time and payment method!</p>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row">
             <div class="col-6 col-md-4">
@@ -176,7 +177,7 @@
                 <div class="controls">
                   <span class="input-group-addon"><i class="fa fa-phone"></i></span>
                   <label>Phone Number:</label>
-                  <input type="tel" class="form-control" id="phone" placeholder="(___)___-____" required data-validation-required-message="Please enter your phone number.">
+                  <input type="tel" class="form-control" id="phone" placeholder="(___) ___-____" required data-validation-required-message="Please enter your phone number.">
                 </div>
               </div>
             </div>
@@ -362,7 +363,7 @@
             </div>
           </div>
 
-          <div class="control-group form-group">
+          <div class="control-group form-group" style="margin-left:10px">
             <div class="controls">
               <input type="checkbox" class="form-check-input" id="confirmation" required data-validation-required-message="We require your consent to contact you further.">
               <label class="form-check-label" for="confirmation" style="font-family: Arial Black; color:black">Yes, Calvert Exterminators may contact me</label>
