--- a/pest-control.html
+++ b/pest-control.html
@@ -190,8 +190,19 @@
     <!-- /.row -->
 
     <div class="row">
+        <div class="card h-100 bg-main my-3">
+            <h4 class="card-header"></h4>
+            <div class="card-body">
+                <h4 style="font-family:Arial Black;">MONTHLY PEST CONTROL</h4>
+                <p class="card-text">
+                    One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection.
+                </p>
+            </div>
+            <div class="card-footer"></div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col">
-            <h2 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h2>
             <h4 class="my-4">FIRST VISIT</h4>
             <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
             <h4 class="my-4">REGULAR VISITS</h4>
