--- a/termite-control.html
+++ b/termite-control.html
@@ -124,7 +124,7 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <img class="img-fluid" src="https://placehold.it/750x500" alt="">
         </div>
 
         <div class="col-md-4">
@@ -182,24 +182,14 @@
     <!-- /.row -->
 
     <div class="row">
-        <div class="card h-100 bg-main my-3">
-            <h4 class="card-header"></h4>
-            <div class="card-body">
-                <h4 style="font-family:Arial Black;">MONTHLY PEST CONTROL</h4>
-                <p class="card-text">
-                    One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection.
-                </p>
-            </div>
-            <div class="card-footer"></div>
-        </div>
-        <!--div class="col">
+        <div class="col">
             <h2 class="my-4">HOW MONTHLY PEST CONTROL WORKS:</h2>
             <h4 class="my-4">FIRST VISIT</h4>
             <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
             <h4 class="my-4">REGULAR VISITS</h4>
             <p> Pests are always active, so you need protection to stay ahead of them. Our individualized treatments adjust with the season to protect your
                 property from seasonal pest activity in your area. </p>
-        </div-->
+        </div>
     </div>
 
 </div>
