--- a/dog-runs.html
+++ b/dog-runs.html
@@ -78,8 +78,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                         <a class="dropdown-item" href="about.html">About Us</a>
-                        <a class="dropdown-item" href="mammals.html">Clients</a>
-                        <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
+                        <a class="dropdown-item" href="clients.html">Clients</a>
+                        <a class="dropdown-item" href="vet.html">Veteran Owned</a>
                         <a class="dropdown-item" href="faq.html">FAQ</a>
                     </div>
                 </li>
@@ -120,7 +120,7 @@
     </ol>
 
     <!-- Image Header -->
-    <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
+    <img class="img-fluid rounded mb-4" src="https://placehold.it/1200x300" alt="">
     <div class="row">
         <div class="card h-100 bg-main my-3">
             <h4 class="card-header"></h4>
