Moved image credits to a new credits page. Added a "live" counter for pests killed since founding.

--- a/ants.html
+++ b/ants.html
@@ -136,9 +136,9 @@
                 <img class="img-fluid rounded mb-3 mb-md-0" src="carpenter-ant.jpg" alt="">
             </a-->
             <a title="Muhammad Mahdi Karim / GFDL 1.2 (http://www.gnu.org/licenses/old-licenses/fdl-1.2.html)" href="https://commons.wikimedia.org/wiki/File:Carpenter_ant_Tanzania_crop.jpg"><img width="512" alt="Carpenter ant Tanzania crop" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Carpenter_ant_Tanzania_crop.jpg/512px-Carpenter_ant_Tanzania_crop.jpg"></a>
-            <a>
+            <!--a>
                 By <a href="https://en.wikipedia.org/wiki/User:Muhammad_Mahdi_Karim" class="extiw" title="w:User:Muhammad Mahdi Karim">Muhammad Mahdi Karim</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="http://www.gnu.org/licenses/old-licenses/fdl-1.2.html" title="GNU Free Documentation License 1.2">GFDL 1.2</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=8109474">Link</a>
-            </a>
+            </a-->
         </div>
         <div class="col-md-5">
             <h3>Pest Description</h3>
@@ -194,10 +194,10 @@
             <!--a href="#">
                 <img class="img-fluid rounded mb-3 mb-md-0" src="https://en.wikipedia.org/wiki/Crematogaster#/media/File:Crematogaster_corticicola_casent0173934_profile_2.jpg" alt="">
             </a-->
-            <a title="April Nobile / © AntWeb.org" href="https://commons.wikimedia.org/wiki/File:Crematogaster_corticicola_casent0173934_profile_2.jpg"><img width="512" alt="Crematogaster corticicola casent0173934 profile 2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Crematogaster_corticicola_casent0173934_profile_2.jpg/512px-Crematogaster_corticicola_casent0173934_profile_2.jpg"></a>
-            <a>
-                By The photographer and <a rel="nofollow" class="external text" href="http://www.antweb.org">www.AntWeb.org</a>, <a href="https://creativecommons.org/licenses/by/4.0" title="Creative Commons Attribution 4.0">CC BY 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=8126780">Link</a>
-            </a>
+            <img width="512" alt="Crematogaster castanea, by Oxyrhachis sp, Krantzkloof NR, c" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Crematogaster_castanea%2C_by_Oxyrhachis_sp%2C_Krantzkloof_NR%2C_c.jpg/512px-Crematogaster_castanea%2C_by_Oxyrhachis_sp%2C_Krantzkloof_NR%2C_c.jpg"></a>
+            <!--a>
+                By <a href="//commons.wikimedia.org/wiki/User:JMK" title="User:JMK">JMK</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=42053740">Link</a>
+            </a-->
         </div>
         <div class="col-md-5">
             <h3>Pest Description</h3>
@@ -248,7 +248,7 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://www.antwiki.org/wiki/images/5/5e/Tapinoma_sessile_queen%2C_Groton%2C_Massachusetts_%28Tom_Murray%29.JPG" alt="">
             </a>
         </div>
         <div class="col-md-5">
@@ -299,8 +299,11 @@
     <div class="row">
         <div class="col-md-7">
             <a href="#">
-                <img class="img-fluid rounded mb-3 mb-md-0" src="https://placehold.it/700x300" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Linepithema_Argentine_ant.jpg" alt="">
             </a>
+            <!--a>
+                By <a href="//commons.wikimedia.org/wiki/User:Penarc" title="User:Penarc">Penarc</a> - {<a class="external free" href="https://en.wikipedia.org/wiki/Image:Argentine_ant.jpg">http://en.wikipedia.org/wiki/Image:Argentine_ant.jpg</a> Nat1192}, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=4274419">Link</a>
+            </a-->
         </div>
         <div class="col-md-5">
             <h3 class="my-3">Pest Description</h3>
