Updated about and contact pages

--- a/contact.html
+++ b/contact.html
@@ -245,6 +245,7 @@
                   <select class="custom-select" id="region" required data-validation-required-message="Please enter your region.">
                     <option value="MD" selected>Maryland</option>
                     <option value="DC">Washington DC</option>
+                    <option value="VA">Virginia</option>
                   </select>
                 </div>
               </div>
