--- a/about.html
+++ b/about.html
@@ -127,12 +127,29 @@
       </div>
       <div class="col-lg-6">
         <h2>About Calvert Exterminators</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt,
-          harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit
-          ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione
-          ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <p>
+          Calvert Exterminators has been in business since 1981. We are experienced in the pest control industry with
+          40 years serving our community. Our business has grown in recent years to provide service to not only Southern Maryland,
+          but DC and Virginia as well! We look forward to bringing that small business community to your door, wherever that may be!
+          You can place your trust in us to remove unwanted pests from your home or business.
+        </p>
+      </div>
+      <div class="col-lg-6">
+        <h2>Veteran Owned</h2>
+        <p>
+          Our business is veteran owned and determined to show support for the veteran community by offering veteran discounts
+          to the brave men and women who have fought for our country. The owner of Calvert Exterminators, Dennis ((((H)))), has been
+          giving back to the veteran community for years at the American Legion.
+
+        </p>
+      </div>
+      <div class="col-lg-6">
+        <h2>Veteran Discount</h2>
+        <h5>You've fought for us. Now let us fight for you.</h5>
+        <p>
+          Eligible customers who provide proof of service may receive a military discount as a thank you for their service.
+          To receive the discount, simply ask our staff about it while calling or emailing to arrange an appointment.
+        </p>
       </div>
     </div>
     <!-- /.row -->
